sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:9: error: not found: value Tri
    Tri=true
    ^AlgCocktailSort2:15: error: not found: value Tri
        Tri=true
        ^