sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
 var lgr=getNombreValeurs()
 var Inverse=false
  while (Inverse==true) {
  for (i<-0 to lgr-2) {
  if (!plusPetit(i, i+1)) {
    echange (i,i+1)
    Tri=true
  }
  }
    for (i<-0 to lgr-2) {
      if (!plusPetit(lgr-i-2,lgr-i-2+1)) {
        echange (lgr-i-2,lgr-i-2+1)
        Tri=true
      }
    }
}
}